<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">aasWaas</string>
    <string name="local_service_started">Aaswaas activated!!!</string>
   
    <string name="menu_settings">Settings</string>
    <string name="aaswaas_demo">aasWaas Demo</string>
    <string name="x_axis">X-Axis</string>
    <string name="z_axis">Z-Axis</string>
    <string name="gforce">gforce</string>
    <string name="logo">logo</string>
    <string name="hello">Hello, Ankur aka Mr.AWSUM GENIUS. Welcome!!!.</string>
    <string name="current">CURRENT G-Force:</string>
    <string name="location">CURRENT LOCATION:</string>
    <string name="wel">WELCOME,</string>
    <string name="contact">YOUR SAVED CONTACTS:</string>
    <string name="Editname">Edit your name in profile..</string>
    <string name="mob">MOBILE NUMBER:</string>
    <string name="Name">NAME:</string>
    <string name="Address">ADDRESS:</string>
    <string name="Blood">BLOOD GROUP:</string>
    <string name="Add">Add</string>
    <string name="Delete">Delete</string>
    <string name="Save">Save</string>
    <string name="Edit">Edit</string>
    <string name="entermob">Enter Mobile Number</string>
    <string name="msg1">MESSAGE SENT DURING PANIC SITUATION</string>
    <string name="msg2">MESSAGE SENT DURING ACCIDENT</string>
    <string name="descmsg1">Message to be sent during panic situation..</string>
    <string name="descmsg2">Message to be sent during accident..</string>
    
    <string name="YOUR_FULL_NAME">YOUR FULL NAME</string>
    <string name="YOUR_ADDRESS">YOUR ADDRESS</string>
    <string name="YOUR_MOBILE_NUMBER">YOUR MOBILE NUMBER</string>
    <string name="YOUR_BLOOD_GROUP">YOUR BLOOD GROUP</string>
    
    <string name="title">Login to search for blood</string>
 	<string name="num">YOUR NUMBER</string>
 	<string name="pass">PASSWORD</string>
 	<string name="login">Login</string>
 	<string name="register">Click here to register..</string>
 	<string name="registertext">Register</string>
 	<string name="search">Search</string>
 	<string name="searchhint">Enter Blood Group like A+ve</string>
    <string name="activate">Do you want to activate?</string>
    

    <color name = "MyBlue">#179DBB</color>
    
    

    <string name="action_settings">Settings</string>
    
    <string-array name="menus">
        <item >Dashboard</item>
        <item >Profile</item>
        <item >Edit Profile</item>
        <item >Edit Message</item>
        <item >Manage Contacts</item>
        <item >Blood Group</item>
        <item>Settings</item>
        
        
    </string-array>
    
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>



</resources>