<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:paddingTop="20dip"
	    android:text="@string/aaswaas_demo"
	    android:textSize="16sp"
	    android:textStyle="bold" />

 	<TableLayout
		android:paddingTop="10dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="*">
		<TableRow>
			<TextView  
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content"
	    		android:textSize="14sp"  
	    		android:text="@string/x_axis"
	    		android:gravity="center"/>
	    	<TextView  
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content" 
	    		android:textSize="14sp" 
	    		android:text="Y-Axis"
	    		android:gravity="center"/>
	    	<TextView  
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content"
	    		android:textSize="14sp"  
	    		android:text="@string/z_axis"
	    		android:gravity="center"/>
		</TableRow>
		<TableRow>
			<TextView  
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content"
	    		android:id="@+id/x_axis"
	    		android:gravity="center"/>
	    	<TextView  
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content"
	    		android:id="@+id/y_axis"
	    		android:gravity="center"/>
	    	<TextView  
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content"
	    		android:id="@+id/z_axis"
	    		android:gravity="center"/>
		</TableRow>
	</TableLayout>

 	<TextView
 	    android:id="@+id/txtuname"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:text="G-Force"
 	    android:textAppearance="?android:attr/textAppearanceMedium" />

 	<TextView
 	    android:id="@+id/txtgf"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:text="@string/gforce" />

</LinearLayout>
