<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
					        android:id="@+id/scrollView1"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:layout_centerVertical="true">
		<RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical">
				
				    <!-- <ToggleButton
				        android:id="@+id/btntoggle"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignParentRight="true"
				        android:layout_alignParentTop="true"
				        android:text="ToggleButton" /> -->
				
				
						    <TextView
						        android:id="@+id/txtwelcome"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:layout_alignParentTop="true"
						        android:layout_marginTop="20dp"
						        android:textColor="#179DBB"
						        android:text="@string/wel"
						        android:layout_marginLeft="10dp"  
						        android:textSize="15sp" />
						
						    <TextView
						        android:id="@+id/txtuname"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
								android:layout_marginLeft="85dp"
								android:layout_marginTop="40dp"
                                android:textStyle="bold"
						        android:text="@string/Editname"
						        android:textAppearance="?android:attr/textAppearanceMedium"
						        android:textSize="15sp" />
				
				            <TextView
				                android:id="@+id/textView3"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_marginTop="85dp"
				                android:text="@string/current"
				                android:layout_marginLeft="10dp"
				                android:textSize="15sp" 
				                android:textColor="#179DBB"
				                 />
				            
							<View
							    android:layout_width="wrap_content"
							    android:layout_height="2dp"
							    android:background="#179DBB" 
							    android:layout_marginTop="105dp"
							    android:layout_marginLeft="10dp"
							    android:layout_marginRight="10dp"
							    />
							<TextView
				                android:id="@+id/txtgf"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_marginLeft="20dp"
				                android:layout_marginTop="115dp"
				                android:text="0.000"
				                android:textSize="14sp" 
				                 />
							
							<TextView
				                android:id="@+id/txtlocation"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_marginTop="140dp"
				                android:text="@string/location"
				                android:layout_marginLeft="10dp"
				                android:textSize="15sp" 
				                android:textColor="#179DBB"
				                 />
				            
							<View
							    android:layout_width="wrap_content"
							    android:layout_height="2dp"
							    android:background="#179DBB" 
							    android:layout_marginTop="160dp"
							    android:layout_marginLeft="10dp"
							    android:layout_marginRight="10dp"
							    />
							
							<ImageView
						        android:id="@+id/image"
						        android:layout_width="24dp"
						        android:layout_height="24dp"
						        android:layout_marginTop="165dp"
						        android:layout_marginLeft="10dp"
						        android:src="@drawable/location" />
				            <TextView
				                android:id="@+id/location"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_marginLeft="40dp"
				                android:layout_marginTop="170dp"
				                android:textSize="14sp" 
				                 />
				      
				
				            <TextView
				                android:id="@+id/textView2"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_marginTop="200dp"
				                android:layout_marginLeft="10dp"
				                android:textColor="#179DBB"
				                android:text="@string/contact"
				                android:textSize="15sp"  />
							<View
							    android:layout_width="wrap_content"
							    android:layout_height="2dp"
							    android:background="#179DBB" 
							    android:layout_marginTop="220dp"
							    android:layout_marginLeft="10dp"
							    android:layout_marginRight="10dp"
							    />
				
							<!--  <ImageView
							    android:id="@+id/imageView"
							    android:layout_width="60dp"
							    android:layout_height="60dp"
							    android:layout_alignParentRight="true"
							    android:layout_alignTop="@+id/txtwelcome"
							    android:layout_toRightOf="@+id/txtuname"
							    android:maxHeight="200dp"
							    android:src="@drawable/ic_launcher" />-->
							
							    <LinearLayout
								    android:layout_width="wrap_content"
								    android:layout_height="wrap_content"
								    android:orientation="vertical" 
								    android:id="@+id/mylinear"
								    android:layout_marginLeft="20dp"
								    android:layout_marginTop="210dp"
								  >
							
								</LinearLayout>
								<!--<View
							    android:layout_width="wrap_content"
							    android:layout_height="2dp"
							    android:background="#179DBB" 
							    android:layout_marginTop="425dp"
							    android:layout_marginLeft="10dp"
							    android:layout_marginRight="10dp"
							    />-->
								
				
		
		
		    <!--<Button
		        android:id="@+id/btn_pick"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_marginTop="20dp"
		        android:text="Change Image" />-->
		
		
							      
						
		
		</RelativeLayout>

</ScrollView>