<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
					        android:id="@+id/scrollView1"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:layout_centerVertical="true">
		<RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" 
		    android:id="@+id/myrelative">
		            <TextView
		                android:id="@+id/txtname"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="15dp"
		                android:layout_marginLeft="10dp"
		                android:textColor="#179DBB"
		                android:text="@string/Name"
		                android:textSize="15sp"  />
		        
		        <View
				    android:layout_width="wrap_content"
				    android:layout_height="1dp"
				    android:background="#179DBB" 
				    android:layout_marginTop="34dp"
				    android:layout_marginLeft="10dp"
				    android:layout_marginRight="10dp"
				    />
		        
		        <TextView
		        android:id="@+id/name"
		        android:layout_width="wrap_content"
		        android:layout_height="30dp"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:padding="5dp"
		        android:layout_marginRight="10dp"
				android:layout_marginLeft="30dp"
				android:layout_marginTop="42dp"
		        android:ems="10"
		        android:textSize="14sp" >
		
		        <requestFocus />
		    </TextView>
		    
		        <TextView
		                android:id="@+id/txtaddress"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="80dp"
		                android:layout_marginLeft="10dp"
		                android:textColor="#179DBB"
		                android:text="@string/Address"
		                android:textSize="15sp"  />
		        
		        <View
				    android:layout_width="wrap_content"
				    android:layout_height="1dp"
				    android:background="#179DBB" 
				    android:layout_marginTop="99dp"
				    android:layout_marginLeft="10dp"
				    android:layout_marginRight="10dp"
				    />
		            <TextView
		        android:id="@+id/address"
		        android:layout_width="wrap_content"
		        android:layout_height="30dp"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:layout_marginTop="107dp"
		        android:layout_marginRight="10dp"
				android:layout_marginLeft="30dp"
				android:padding="5dp"
		        android:ems="10"
		        android:textSize="14sp" >
		
		        <requestFocus />
		    </TextView>
		 
		        <TextView
		                android:id="@+id/txtmob"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="145dp"
		                android:layout_marginLeft="10dp"
		                android:textColor="#179DBB"
		                android:text="@string/mob"
		                android:textSize="15sp"  />
		        
		        <View
				    android:layout_width="wrap_content"
				    android:layout_height="1dp"
				    android:background="#179DBB" 
				    android:layout_marginTop="164dp"
				    android:layout_marginLeft="10dp"
				    android:layout_marginRight="10dp"
				    />            
		            
		                <TextView
		        android:id="@+id/mob"
		        android:layout_width="wrap_content"
		        android:layout_height="30dp"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:padding="5dp"
		        android:layout_marginTop="172dp"
		        android:layout_marginRight="10dp"
				android:layout_marginLeft="30dp"
		        android:ems="10" 
		        android:textSize="14sp">
		
		        <requestFocus />
		    </TextView>
		    
		            <TextView
		                android:id="@+id/txtbg"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="210dp"
		                android:layout_marginLeft="10dp"
		                android:textColor="#179DBB"
		                android:text="@string/Blood"
		                android:textSize="15sp"  />
		        
		        <View
				    android:layout_width="wrap_content"
				    android:layout_height="1dp"
				    android:background="#179DBB" 
				    android:layout_marginTop="229dp"
				    android:layout_marginLeft="10dp"
				    android:layout_marginRight="10dp"
				    />
		                
		                
		    <TextView
		        android:id="@+id/blood"
		        android:layout_width="wrap_content"
		        android:layout_height="30dp"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:layout_marginTop="237dp"
		        android:layout_marginRight="10dp"
		        android:padding="5dp"
		        android:textSize="14sp"
				android:layout_marginLeft="30dp"
		        android:ems="10">
		
		        <requestFocus />
		    </TextView>
		
		    <!--  <Button
		        android:id="@+id/btnedit"
		        android:layout_width="fill_parent"
		        android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
		        android:layout_height="wrap_content"
		        android:textColor="#fff"
		        android:background="@drawable/rounded_button"
		        android:layout_marginTop="287dp"
		        android:textSize="15sp" 
		        android:text="Edit" />-->
		
		</RelativeLayout>
</ScrollView>